# akari

./: .clang-tidy  .gitignore  README.md  build.sh  dev.sh  meson.build  meson.options
docs/: README.md
docs/concepts/: architecture.md
docs/preliminary/: goals.md  intro.md
examples/: client.c  meson.build
src/: main.c
src/client/: client.c  client.h
src/common/: buffer.c  connection.cc  connection.h  error.h  message.c  message.h  message_payload.h  protocol.cc  protocol.h  window.h
src/logger/: logger.cc  logger.h
src/server/: buffer.c  buffer.h  connection.c  connection.h  server.c  server.cc
